add health check

--- a/backend/backend.env
+++ b/backend/backend.env
@@ -2,12 +2,11 @@
 USE_UNSTRUCTURED_API=false
 
 CHAT_LLM_TYPE=openai
-# CHAT_LLM_TYPE=google-genai
 LLM_HAS_STRUCTURED_OUTPUT=true
 
-LANGCHAIN_TRACING_V2=true
+LANGCHAIN_TRACING_V2=false
 LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
-LANGCHAIN_PROJECT="pr-galios-rings-33"
+LANGCHAIN_PROJECT=
 
 MINIO_ENDPOINT_URL=http://agent-minio-1:9000
 BACKEND_MINIO_BUCKET=documents
