--- a/compose.yml
+++ b/compose.yml
@@ -11,7 +11,7 @@ networks:
   agent-poc:
     driver: bridge
     driver_opts:
-      com.docker.network.bridge.enable_ip_masquerade: "true"
+      com.docker.network.bridge.enable_ip_masquerade: 'true'
       com.docker.network.driver.mtu: 1500
     ipam:
       config:
