--- a/frontend/compose.yml
+++ b/frontend/compose.yml
@@ -2,7 +2,13 @@
 services:
   init-frontend-volumes:
     image: 'debian:12.8-slim'
-    profiles: [ frontend, all, all-cpu ]
+    # BEWARE!
+    # We mount subpaths of named volumes. The subdirectories must be created
+    # before the mounting container starts.
+    #
+    # If the 
+    #
+    profiles: [ init-volumes, init-volumes-cpu, frontend, all, all-cpu ]
     # No network is needed to initialize named volumes
     network_mode: none
     user: '0:0' 
@@ -29,9 +35,8 @@ services:
           chown -R 1000:1000 $$VOL
           chmod -R a+rwx $$VOL
 
-          # ls -la $$VOL
+          ls -la $$VOL
         done
-        # ls -la /var ;
     restart: 'no'
 
   vite-dev-server:
@@ -67,7 +72,8 @@ services:
     user: '1000:1000'
     command: [ '/run_dev_server.sh' ]
     depends_on:
-      - init-frontend-volumes
+      init-frontend-volumes:
+        condition: service_completed_successfully
 
   proxy:
     image: 'nginx:1.27.3-bookworm'
@@ -80,6 +86,12 @@ services:
       - '15173:15173'
     networks:
       - agent-poc
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:15173']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
 
 volumes:
   local-frontend-1:
