--- a/backend/requirements-cpu.compiled.txt
+++ b/backend/requirements-cpu.compiled.txt
@@ -464,7 +464,9 @@ networkx==3.4.2
     # via torch
     # from https://pypi.org/simple
 nltk==3.9.1
-    # via unstructured
+    # via
+    #   app (pyproject.toml)
+    #   unstructured
     # from https://pypi.org/simple
 numpy==1.26.4
     # via
@@ -579,7 +581,12 @@ portalocker==3.1.1
     # via iopath
     # from https://pypi.org/simple
 prometheus-client==0.21.1
-    # via flower
+    # via
+    #   flower
+    #   prometheus-fastapi-instrumentator
+    # from https://pypi.org/simple
+prometheus-fastapi-instrumentator==7.0.2
+    # via app (pyproject.toml)
     # from https://pypi.org/simple
 prompt-toolkit==3.0.48
     # via click-repl
@@ -828,7 +835,9 @@ sqlalchemy==2.0.37
     #   langchain-postgres
     # from https://pypi.org/simple
 starlette==0.41.3
-    # via fastapi
+    # via
+    #   fastapi
+    #   prometheus-fastapi-instrumentator
     # from https://pypi.org/simple
 sympy==1.13.1
     # via
@@ -921,7 +930,7 @@ typing-extensions==4.12.2
     #   typer
     #   typing-inspect
     #   unstructured
-    # from https://pypi.org/simple
+    # from https://download.pytorch.org/whl/cpu
 typing-inspect==0.9.0
     # via
     #   dataclasses-json
